--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-
+node_modedules/
+/node_modules
+node_modules/.package-lock.json
+ 
 # Elastic Beanstalk Files
+.elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
